# Extractly

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Home.py  Old.py  README.md  app.py  cli.py  pyproject.toml  requirements.txt  video.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: feedback.jsonl
data/sample_docs/: sample_invoice.txt  sample_resume.txt
pages/: 1Schemas Builder.py  1_Schema_Studio.py  2Extraction.py  2Inference.py  2_Extract.py  3_Results.py  4_Feedback.py  4_Settings.py  5_Settings.py  Home.py  Inference.py  Training.py
schemas/: busta_paga.json  cai.json  demo_invoice.json  fattura.json  passport.json  prebuilt_schemas.json  schemas.json
src/: classifier.py  config.py  extractor.py  feedback_store.py  logging.py  ocr_engine.py  openai_client.py  preprocess.py  schema_manager.py  utils.py
src/domain/: run_store.py  schema_store.py  validation.py
src/extractly/: config.py  logging.py
src/extractly/domain/: run_store.py  schema_store.py  validation.py
src/extractly/integrations/: ocr.py  openai_client.py  preprocess.py
src/extractly/pipeline/: classification.py  extraction.py  runner.py
src/extractly/ui/: components.py
src/integrations/: ocr.py  openai_client.py
src/pipeline/: classification.py  extraction.py  runner.py  schema_suggest.py
tests/: test_run_store.py  test_schema_validation.py
utils/: classifier.py  confidence_utils.py  extractor.py  openai_client.py  ui_components.py  utils.py
